<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mediaManagerInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/media_desc"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/picAndVidLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/mediaPicture"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:text="@string/takePic" />

            <Button
                android:id="@+id/mediaVideo"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/takeVid" />
        </LinearLayout>

        <Button
            android:id="@+id/mediaBack"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:text="@string/exit"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp" />

        <TextView
            android:id="@+id/mediaCounter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/picAndVidCount"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>