<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/iSenseOnlyOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="12dip"
            android:text="@string/iSenseConfig"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
        
         <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/sample_rate_prompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/sample_rate"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/srate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/sample_rate_prompt"
                android:digits="0123456789"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="20" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dip"
                android:text="@string/sessionName"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/sessionName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/nameLabel"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz -_.,01234567879()@"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="50"
                android:singleLine="true"
                android:text="" >

                <requestFocus />
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/selectButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/selectProject" />

        </RelativeLayout>

        <CheckBox
            android:id="@+id/select_exp_later"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/select_later"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

       

        <TextView
            android:id="@+id/otherOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="25dp"
            android:text="@string/otherConfig"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/studentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dip"
                android:text="@string/seatNum"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/studentNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/studentLabel"
                android:digits="1234567890"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="5"
                android:text="@string/seatNumber" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/isCanobie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:checked="true"
                android:text="@string/canobieRides"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/rideNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/isCanobie"
                android:paddingTop="12dip"
                android:text="@string/ride"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/rides"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/isCanobie"
                android:layout_toRightOf="@+id/rideNameLabel"
                android:prompt="@string/rides_prompt" />
            
            <Button
			    android:id="@+id/ok"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/ok" 
			    android:layout_alignParentBottom="true"/>
	        
        </RelativeLayout>
		
		
       
    </LinearLayout>