<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/instructions"
            android:textSize="20dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/middleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomLayout"
        android:layout_below="@+id/topLayout"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/aboutSync"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/syncTime"
                android:textSize="18dp" >

                <requestFocus />
            </TextView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/sendButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/colorless"
                android:text="@string/send"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/receiveButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/colorless"
                android:text="@string/receive"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonGoBack"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/colorless"
            android:text="@string/cancel"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</RelativeLayout>